# gnome-utils

./: ChangeLog  ChangeLog.plugin  HACKING  MAINTAINERS  Makefile.am  NEWS  README  THANKS  configure.ac  configure.in  gnome-utils.spec.in
baobab/: ChangeLog
baobab/data/: Makefile.am  baobab-main-window.ui
baobab/help/: ChangeLog  Makefile.am
baobab/help/C/: devices.page  ftp-login.page  ftp.page  index.page  introduction.page  scan-file-system.page  scan-folder.page  scan-home.page  scan-remote.page  ssh.page  status.page  structure.page  view.page  web-dav.page  windows-share.page
baobab/help/da/: da.po
baobab/help/es/: es.po
baobab/help/fr/: fr.po
baobab/src/: baobab-prefs.c  baobab-scan.c  baobab-utils.c  baobab-utils.h  baobab.c  baobab.h  callbacks.c  callbacks.h
gcalc/: ChangeLog  Makefile.am  gnome-calc.c  gnome-calculator.1  gnome-calculator.desktop.in
gcalc/help/C/: gnome-calculator-C.omf
gcharmap/: ChangeLog  gnome-character-map.desktop.in
gcharmap/doc/eu/: Makefile.am  gcharmap-eu.omf  gcharmap.sgml
gcharmap/help/C/: gnome-character-map.xml
gcharmap/src/: callbacks.c  interface.c
gdialog/: ChangeLog  msgbox.c
gdiskfree/doc/: Makefile.am
gdiskfree/doc/eu/: Makefile.am  gdiskfree-eu.omf  gdiskfree.sgml
gfloppy/: ChangeLog  Makefile.am  gfloppy.desktop.in
gfloppy/doc/: ChangeLog  Makefile.am
gfloppy/doc/ca/: ca.po
gfloppy/doc/de/: de.po
gfloppy/doc/el/: el.po
gfloppy/doc/en_GB/: en_GB.po
gfloppy/doc/es/: es.po
gfloppy/doc/fi/: fi.po
gfloppy/doc/fr/: fr.po
gfloppy/doc/it/: it.po
gfloppy/doc/ru/: ru.po
gfloppy/src/: Makefile.am  main.c
gnome-dictionary/: ChangeLog  README  TODO
gnome-dictionary/data/: GNOME_DictionaryApplet.server.in.in  GNOME_DictionaryApplet.xml  Makefile.am  Makefile.in  default-dictionary.desktop.in  gnome-dictionary-ui.xml  gnome-dictionary.desktop.in  gnome-dictionary.desktop.in.in  gnome-dictionary.schemas.in
gnome-dictionary/docs/: Makefile.in  source-configuration.txt
gnome-dictionary/docs/reference/: Makefile.in
gnome-dictionary/help/: ChangeLog  Makefile.am  Makefile.in
gnome-dictionary/help/C/: Makefile  Makefile.in  gnome-dictionary.xml
gnome-dictionary/help/es/: es.po
gnome-dictionary/help/id/: id.po
gnome-dictionary/help/sv/: sv.po
gnome-dictionary/libgdict/: .cvsignore  Makefile.am  Makefile.in  gdict-client-context.c  gdict-context-private.h  gdict-context.c  gdict-context.h  gdict-defbox.c  gdict-defbox.h  gdict-entry.c  gdict-entry.h  gdict-marshal.list  gdict-source-loader.c  gdict-source-loader.h  gdict-source.c  gdict-source.h  gdict-utils.c  gdict-utils.h  gdict.h  test-client.c  test-defbox.c  test-entry.c  test-source.c
gnome-dictionary/src/: Makefile.am  Makefile.in  gdict-about.c  gdict-app.c  gdict-app.h  gdict-applet.c  gdict-applet.h  gdict-pref-dialog.c  gdict-window.c  gdict-window.h  gtkalignedwindow.h  main.c
gnome-screenshot/: ChangeLog  gnome-panel-screenshot.c  gnome-screenshot.c  screenshot-dialog.c
gsearchtool/: ChangeLog  Makefile.am  gnome-search-tool.desktop.in  gsearchtool-callbacks.c  gsearchtool-support.c  gsearchtool-support.h  gsearchtool.c
gsearchtool/help/: ChangeLog  Makefile.am
gsearchtool/help/es/: es.po
gsearchtool/help/eu/: Makefile.am  gsearchtool-eu.omf  gsearchtool.sgml
gsearchtool/help/it/: it.po
gsearchtool/help/uk/: gnome-search-tool-uk.omf  gnome-search-tool.xml
gstripchart/doc/: Makefile.am
gstripchart/doc/eu/: Makefile.am  gstripchart-eu.omf  gstripchart.sgml
gtt/: ChangeLog  Makefile.am  NEWS  TODO  app.c  app.h  ctree.c  ctree.h  file-io.c  file-io.h  ghtml.c  gtt.h  idle-timer.c  idle-timer.h  journal.c  journal.h  main.c  menucmd.c  menus.c  myoaf.c  options.c  phtml.c  phtml.h  plug-in.c  plug-in.h  prefs.c  prefs.h  proj-prop.c  proj.c  proj.h  proj_p.h  props-invl.c  props-proj.c  props-task.c  props-task.h  timer.c  toolbar.c  util.c  util.h  xml-read.c  (+1 more)
gtt/doc/C/: Makefile.am  gtt.sgml
gtt/doc/eu/: Makefile.am  gtt-eu.omf
gtt/ghtml/C/: journal.ghtml  primer.ghtml
gtt/glade/: Makefile.am  interval_edit.glade  interval_edit_strings.c  interval_popup.glade  prefs.glade  project_properties.glade  project_properties_strings.c  task_popup.glade  task_properties.glade  task_properties_strings.c
gtt/help/: Makefile.am
gtt/help/C/: Makefile.am
gtt/phtml/C/: Makefile.am  alldata.phtml
logview/: ChangeLog  ChangeLog.plugin  Makefile.am  calendar.c  gnome-system-log.1  gnome-system-log.desktop.in  grablogs.conf.4  log_repaint.c  log_repaint.h  loglist.c  loglist.h  logrtns.c  logrtns.h  logview-debug.c  logview-debug.h  logview-findbar.c  logview-iface-collector.c  logview-iface-collector.h  logview-iface-io.c  logview-iface-io.h  logview-iface-view.c  logview-iface-view.h  logview-iface.c  logview-iface.h  logview-log.h  logview-module.c  logview-module.h  logview-plugin-list.c  logview-plugin-list.h  logview-plugin-manager.c  logview-plugin-manager.h  logview-plugin.c  logview-plugin.h  logview-window.c  logview.c  logview.h  main.c  misc.c  misc.h  monitor.c  (+4 more)
logview/doc/C/: .cvsignore  Makefile.am
logview/docs/: Makefile.am
logview/docs/reference/: Makefile.am
logview/docs/reference/logview/: Makefile.am  logview-docs.sgml  logview.types
logview/help/: ChangeLog  Makefile.am
logview/help/C/: gnome-system-log.xml
logview/help/uk/: gnome-system-log-uk.omf  gnome-system-log.xml
logview/help/zh_CN/: zh_CN.po
logview/plugins/: Makefile.am  baseview.c  grablogs.c  grablogs.conf  pipelog.c  pipelog.conf  plainlog.c
meat-grinder/: ChangeLog  archive-generator.desktop.in
meat-grinder/help/: Makefile.am
meat-grinder/help/eu/: Makefile.am  meat-grinder-eu.omf  (+1 more)
omf-install/: .cvsignore
po/: ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  (+44 more)
splash/: ChangeLog  splac.c
stripchart/doc/: Makefile.am
(+38 files in other folders)
